# pypsa-nza-plotter

./: .gitignore  CITATION.cff  LICENSE  README.md  README_OLD.md  pyproject.toml
.github/workflows/: python-package.yml
docs/: # Hydrogen at Tiwai Project Summary.txt  AREA_PLOTS_COMPLETE.md  BAR_CHARTS_COMPLETE.md  BAR_CUSTOMIZATION.md  BOX_PLOTS_COMPLETE.md  CHANGELOG.md  CONSOLIDATION_COMPLETE.md  CONTOURS_COMPLETE.md  HEATMAPS_COMPLETE.md  HISTOGRAMS_COMPLETE.md  LINE_PLOTS_COMPLETE.md  PACKAGE_CONTENTS.md  PIE_CHARTS_COMPLETE.md  PLOTCONFIG_EXTENDED.md  QUICKSTART.md  README.md  SUBPLOTS_COMPLETE.md  SURFACE3D_COMPLETE.md  SURFACE_PLOTS_COMPLETE.md  cmd_line.txt  design_philosophy.md  output.txt  plotconfig.md
examples/area/: area_examples.py
examples/bar/: bar_custom.py  bar_examples.py
examples/box/: box_examples.py
examples/contour/: contour_examples.py
examples/heatmap/: heatmap_examples.py
examples/histogram/: histogram_custom.py  histogram_examples.py
examples/line/: line_examples.py
examples/misc/: config_extended.py  interactive_line_plotter.py
examples/pie/: pie_examples.py
examples/subplots/: subplot_examples.py
examples/surface3d/: surface3d_examples.py
examples/timeseries/: 202407_gen_agg_MWh.csv  timeseries_clean.py
src/pypsa_nza_plotter/: __init__.py  demo.py  utils.py
src/pypsa_nza_plotter/core/: histogram_plotter.py  line_plotter.py  subplot_plotter.py
src/pypsa_nza_plotter/experimental/: surface3d_plotter.py
tests/: test_config_roundtrip.py  test_render_smoke.py  test_subplots_smoke.py
(+11 files in other folders)
